# ChangeLog for media-sound/apulse
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/media-sound/apulse/ChangeLog,v 1.4 2014/11/14 20:48:46 axs Exp $

*apulse-0.1.2-r2 (14 Nov 2014)

  14 Nov 2014; Ian Stakenvicius (_AxS_) <axs@gentoo.org>
  +apulse-0.1.2-r2.ebuild:
  adjusted multilib debs so that stable amd64 users need only set abi_x86_32 on
  emul-linux-x86-soundlibs to install this package for abi_x86_32

*apulse-0.1.2-r1 (10 Nov 2014)

  10 Nov 2014; Ian Stakenvicius (_AxS_) <axs@gentoo.org>
  +apulse-0.1.2-r1.ebuild, -apulse-0.1.2.ebuild:
  add ability to install with the help of emul-* packages, to support stable-
  amd64 users installing keyworded skype[apulse]

*apulse-0.1.2 (14 Oct 2014)

  14 Oct 2014; Jauhien Piatlicki <jauhien@gentoo.org> +apulse-0.1.2.ebuild:
  version bump

*apulse-0.1.1 (05 Oct 2014)

  05 Oct 2014; Jauhien Piatlicki <jauhien@gentoo.org> +apulse-0.1.1.ebuild,
  +metadata.xml:
  initial import, bug 523498