@@ -1,6 +1,6 @@
 # Copyright 1999-2014 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/media-sound/apulse/apulse-0.1.2-r2.ebuild,v 1.1 2014/11/14 20:48:46 axs Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-sound/apulse/apulse-0.1.4.ebuild,v 1.1 2014/12/01 15:59:48 jauhien Exp $
 
 EAPI=5
 
@@ -32,7 +32,7 @@ RDEPEND="${DEPEND}"
 MULTILIB_CHOST_TOOLS=( /usr/bin/apulse )
 
 multilib_src_configure() {
-	local mycmakeargs="-DAPULSEPATH=${EPREFIX}/usr/$(get_libdir)"
+	local mycmakeargs="-DAPULSEPATH=${EPREFIX}/usr/$(get_libdir)/apulse"
 
 	cmake-utils_src_configure
 }
