@@ -1,6 +1,12 @@
 # ChangeLog for media-sound/apulse
 # Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-sound/apulse/ChangeLog,v 1.4 2014/11/14 20:48:46 axs Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-sound/apulse/ChangeLog,v 1.5 2014/12/01 15:59:48 jauhien Exp $
+
+*apulse-0.1.4 (01 Dec 2014)
+
+  01 Dec 2014; Jauhien Piatlicki <jauhien@gentoo.org> +apulse-0.1.4.ebuild,
+  -apulse-0.1.1.ebuild, -apulse-0.1.2-r1.ebuild, -apulse-0.1.2-r2.ebuild:
+  version bump (bug #529042), fix bug #529098
 
 *apulse-0.1.2-r2 (14 Nov 2014)
 
